# skyrim-auto-modder

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: installation.ts  installer.ts  main.ts  mods.ts  state.ts  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  FUNCTION_MAP.md  LIB_STRUCTURE.md  README_LIB.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
